--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@
   margin: 0 auto;
   padding: 2em;
 }
-body {
+/* body {
   background-image: url('../images/bliss.jpg');
-}
+} */
 
 h1, h2 {
   text-align: center;
@@ -16,16 +16,24 @@ nav {
 }
 
 img {
-  width: 250px;
-  height: 250px;
+  width: 188px;
+  height: 188px;
   border: 2px solid teal;
 }
 
-.game {
-  display: flex;                       /* establish flex container */
-  flex-wrap: wrap;                     /* enable flex items to wrap */
-  justify-content: space-around;
+table {
+  border: 5px solid black;
+  width: 600px;
+  height: 600px;
+  margin: 0 auto;
 }
+/* tr {
+  border: 3px solid blue;
+}
+td {
+  border: 1px solid black;
+} */
+
 
 button {
   margin-left: 46%;
