--- a/css/style.css
+++ b/css/style.css
@@ -2,39 +2,154 @@
   max-width: 960px; /*this is a standard width, good for most screens*/
   margin: 0 auto;
   padding: 2em;
-}
-/* body {
-  background-image: url('../images/bliss.jpg');
-} */
-
-h1, h2 {
   text-align: center;
 }
+body {
+  /* background-image: url('../images/bliss.jpg'); */
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  line-height: 1.6;
+}
 
-nav {
+ul {
+  list-style-type: none;
+}
+li {
+  display: inline;
+  margin: 1em;
   padding: 1em;
+  background-color: coral;
+}
+
+.button {
+  background-color: coral;
+  padding: 1em 2em;
+  color: white;
+  border: 0;
+}
+.button:hover{
+  background-color: #333;
+}
+
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7)
+}
+
+.modal-content {
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  padding: 20px;
+  width: 50%;
+  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
+  animation-name: modalopen;
+  animation-duration: 1s;
+}
+
+.winConditionCat {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7)
+}
+.winConditionDog {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7)
+}
+.winConditionDraw {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7)
+}
+
+.closeBtn {
+  color: #ccc;
+  font-size: 30px;
+  float: right;
+}
+
+.closeBtn:hover, .closeBtn:focus{
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+td {
+  padding: 0;
+  margin: 0;
+  border: 2px dotted transparent;
+}
+
+td:hover{
+  cursor: pointer;
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.2)
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+h2 {
+  margin-top: 0;
 }
 
 img {
   width: 188px;
   height: 188px;
-  border: 2px solid teal;
+  /* border: 1px solid #333; */
+  padding: 0;
+  border-radius: 10px 10px 10px 10px;
 }
 
 table {
-  border: 5px solid black;
+  /* border: 5px solid black; */
   width: 600px;
   height: 600px;
   margin: 0 auto;
 }
+
+#reset {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.disableClick{
+  pointer-events: none;
+}
+
+@keyframes modalopen {
+  from{opacity: 0}
+  to{opacity: 1}
+}
+
 /* tr {
   border: 3px solid blue;
 }
 td {
   border: 1px solid black;
 } */
-
-
-button {
-  margin-left: 46%;
-}
